crates/toml_edit/tests/snapshots/invalid/float/arabic-zero-03.stderr
TOML parse error at line 1, column 20
  |
1 | arabic-zero-03 = 1e٠
  |                    ^
invalid exponent, expected digits
